--- a/viewer/style.css
+++ b/viewer/style.css
@@ -1,55 +1,60 @@
 #videoDiv {
-    overflow: hidden;
-    position: fixed;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
+	overflow: hidden;
+	position: fixed;
+	top: 0;
+	right: 0;
+	bottom: 0;
+	left: 0;
 }
 
 #videoDiv > video {
-    width: 100%;
-    height: 100%;
-    position: absolute;
-    top: 0;
-    left: 0;
-    object-fit: cover;
-    z-index: 1;
+	width: 100%;
+	height: 100%;
+	position: absolute;
+	top: 0;
+	left: 0;
+	object-fit: cover;
+	z-index: 1;
 }
 
 #videoDiv > #blurVideoDiv {
-    overflow: hidden;
-    position: fixed;
-    top: 0;
-    right: 0;
-    left: 0;
-    bottom: 0;
-    filter: blur(12px);
-    object-fit: cover;
-    z-index: -1;
+	overflow: hidden;
+	position: fixed;
+	top: 0;
+	right: 0;
+	left: 0;
+	bottom: 0;
+	filter: blur(12px);
+	object-fit: cover;
+	z-index: -1;
 }
 
 #videoDiv > #blurVideoDiv > video {
-    width: 100%;
-    height: 100%;
-    position: absolute;
-    top: 0;
-    left: 0;
-    object-fit: cover;
+	width: 100%;
+	height: 100%;
+	position: absolute;
+	top: 0;
+	left: 0;
+	object-fit: cover;
 }
 
 .content {
-    position: fixed;
-    bottom: 0;
-    left: 0;
-    padding: 32px 64px;
-
-    color: #ffffff;
-    font-size: 2em;
-    font-family: "Shadows Into Light", cursive;
-    z-index: 1000;
+	position: fixed;
+	bottom: 0;
+	left: 0;
+	padding: 32px 64px;
+	
+	color: #ffffff;
+	font-size: 3vmax;
+	font-family: "Shadows Into Light", cursive;
+	z-index: 1000;
+	white-space: nowrap;
 }
 
 html, body, #videoDiv {
-    background-color: transparent;
+	background-color: transparent;
+}
+
+body {
+	overflow: hidden;
 }
